fix: Resolve menu overlap

--- a/pages/dashboard/index.scss
+++ b/pages/dashboard/index.scss
@@ -246,8 +246,7 @@
 	color: #000;
 }
 
-.folded #root-video-dashboard,
-.auto-fold #root-video-dashboard {
+.folded #root-video-dashboard {
 	margin-left: 36px;
 }
 
